# quant-platform

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.proxy.ip.yml  docker-compose.proxy.yml  docker-compose.yml  pyproject.toml
config/: execution_mode.json
docs/: CONSOLIDATION_PLAN.md  DUAL_LANE_DESIGN.md  EXECUTION_TRACKER.md  GIT_FLOW.md  IMPLEMENTATION_MASTER_PLAN.md  PRODUCTION_PROGRAM.md  architecture.md  backtesting.md  durable-paper-runtime.md  event-sourced-execution.md  execution-profile-snapshots.md  experiment-manifests.md  financial-ledger-contract.md  korean-tax-rule-registry-v0.md  margin-funding-liquidation.md  paper-trading-orchestrator.md  research-workbench.md  single-strategy-risk.md  strategy-comparison-report.md  strategy-decision-package.md  venue-simulator.md
examples/: __init__.py  moving_average_alpha.py  rsi_mean_reversion_alpha.py  sma_crossover_alpha.py
infra/: alertmanager.yml  postgres-init.sql  prometheus.yml  sentiment-daemon.env.example  sentiment-daemon.service  timescale-init.sql
migrations/: env.py
ops/: private_paths.txt
scripts/: analyze_shadow_pnl.py  backfill_sentiment_fng.py  bootstrap_historical_events.py  check_public_boundary.py  collect_alt_data.py  common.py  compose_wait.py  demo_flow.py  dlq_reprocess.py  drift_feeder.py  migration_smoke.py  rag_sentiment_pipeline.py  run_attribution_daemon.py  run_drawdown_monitor.py  run_gp_discovery.py  run_learning_loop.py  run_reoptimizer_daemon.py  seed_admin.py  seed_data.py  sentiment_pipeline.py  smoke_e2e.py  start_all.sh  start_execution.sh  start_intelligence.sh  start_llm_tools.sh  start_market_pipeline.sh  start_platform.sh  start_strategy_lab.sh  test_robust_features.py
services/: external_data_service_loader.py
shared/: asyncio_utils.py  events.py  health.py  internal_admin.py  logging.py  observability.py  observability_v3.py  (+8 more)
(+775 files in other folders)
